# poc-tauri-calling-cpp

./: bun.lockb  index.html  package.json
src/: App.svelte  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/cpp/: build.rs  main.cpp
