[package]
name = "tauri-calling-cpp"
version = "0.0.0"
description = "A PoC of tauri calling c++ functions"
authors = ["David Waster"]
edition = "2021"
build = "src/cpp/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }
cc = "1.0"

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
